--- a/style/main.scss
+++ b/style/main.scss
@@ -1,11 +1,30 @@
-$bg-color: #e9e9e9;
-$green-color: #06d6a0;
-$yellow-color: #ffb73b;
-$dark-gray-color: #2e2e2e;
-$blue-color: #2dcadc;
-$red-color: #f34c4c;
-$moov-color: #6c63ff;
+html {
+  --background: #fff;
+  --font-color: #1a1a1a;
+  --light-grey: #e5e5e5;
+  --light-green: #06d6a0;
+  --light-red: #f34c4c;
+  --light-yellow: #ffb73b;
+  --dark-gray-color: #2e2e2e;
+  --moov-color: #6c63ff;
+}
+html[data-theme='dark'] {
+  --primary: #bb86fc;
+  --primary-varient: #3700b3;
+  --secondary: #03dac6;
+  --background: #1a1a1a;
+  --font-color: #fff;
+  --light-grey: #353535;
+  --light-green: #06d6a0;
+  --light-yellow: #ffb73b;
+  --dark-gray-color: #2e2e2e;
+  --light-red: #f34c4c;
+}
 
+*::after,
+*::before {
+  box-sizing: border-box;
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +33,7 @@ html {
   background-size: cover;
   width: 100%;
   height: 100%;
-  background: $bg-color;
+  background: var(--background);
   font-family: 'tajawal';
 }
 
@@ -31,15 +50,15 @@ html {
   vertical-align: bottom;
   background-color: currentColor;
   border-radius: 50%;
-  color: $green-color;
+  color: var(--light-green);
 }
 .special {
-  color: $yellow-color;
+  color: var(--light-yellow);
 }
 .stop {
   left: 10%;
   top: 34%;
-  color: $red-color;
+  color: var(--light-red);
   opacity: 0;
   -webkit-animation: 1s linear infinite ind;
   animation: 1s linear infinite ind;
@@ -76,7 +95,7 @@ html {
 h1 {
   font-size: 4em;
   text-align: center;
-  color: $dark-gray-color;
+  color: var(--font-color);
   font-weight: bold;
 }
 
@@ -86,7 +105,6 @@ h1 {
   justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
-
   align-items: center;
 }
 
@@ -101,7 +119,8 @@ h1 {
   transition: 0.3s;
   display: flex;
   justify-content: space-between;
-  background-color: $dark-gray-color;
+  align-items: center;
+  background-color: var(--dark-gray-color);
   cursor: pointer;
   transition: 0.4s;
 
@@ -138,6 +157,10 @@ h1 {
     width: 100%;
     max-width: 100%;
     justify-content: center;
+  }
+  .dark-mode-button {
+    padding: 0;
+    max-height: 9px;
   }
   .button {
     font-size: 1em;
@@ -177,7 +200,7 @@ h1 {
   background: none;
 }
 .close-modal:hover {
-  color: $red-color;
+  color: var(--light-red);
 }
 
 #title {
@@ -225,7 +248,7 @@ ul {
   list-style: none;
   li {
     font-size: 2em;
-    color: $red-color;
+    color: var(--light-red);
   }
 
   li[title]::before {
@@ -251,5 +274,131 @@ ul {
   }
   .modal {
     max-width: 50vw;
+  }
+}
+.dark-mode-button {
+  --padding: 20px;
+  padding-top: var(--padding);
+  padding-bottom: var(--padding);
+}
+.switch-button {
+  background: var(--dark-gray-color);
+  border-radius: 30px;
+  overflow: hidden;
+  width: 200px;
+  text-align: center;
+  font-size: 22px;
+  font-weight: bolder;
+  letter-spacing: 1px;
+  color: white;
+  position: relative;
+  padding-right: 120px;
+  position: relative;
+
+  &:before {
+    content: 'Dark';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    pointer-events: none;
+  }
+
+  &-checkbox {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+
+    &:checked + .switch-button-label:before {
+      transform: translateX(120px);
+      transition: transform 300ms linear;
+    }
+
+    & + .switch-button-label {
+      position: relative;
+      padding: 15px;
+      display: block;
+      user-select: none;
+      pointer-events: none;
+      isolation: isolate;
+      &:before {
+        content: '';
+        background: var(--light-green);
+        position: absolute;
+        inset: 0;
+        border-radius: 30px;
+        transition: transform 300ms;
+        z-index: -1;
+      }
+
+      .switch-button-label-span {
+        position: relative;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 715px) {
+    width: 100%;
+    height: max-content;
+    text-align: center;
+    font-size: 10px;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    color: white;
+    position: relative;
+    padding-right: 80px;
+    position: relative;
+    &:before {
+      width: 55px;
+    }
+    &-checkbox {
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 2;
+
+      &:checked + .switch-button-label:before {
+        transform: translateX(76px);
+        transition: transform 300ms linear;
+      }
+
+      & + .switch-button-label {
+        position: relative;
+        padding: 5px;
+        display: block;
+        user-select: none;
+        pointer-events: none;
+        isolation: isolate;
+        &:before {
+          content: '';
+          background: var(--light-green);
+          position: absolute;
+          inset: 0;
+          border-radius: 30px;
+          transition: transform 300ms;
+          z-index: -1;
+        }
+
+        .switch-button-label-span {
+          position: relative;
+        }
+      }
+    }
   }
 }
