--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 html {
   --background: #fff;
   --font-color: #1a1a1a;
+  --font-color-model: #f34c4c;
   --light-grey: #e5e5e5;
   --light-green: #06d6a0;
   --light-red: #f34c4c;
@@ -13,6 +14,7 @@ html[data-theme='dark'] {
   --primary: #bb86fc;
   --primary-varient: #3700b3;
   --secondary: #03dac6;
+  --font-color-model: #06d6a0;
   --background: #1a1a1a;
   --font-color: #fff;
   --light-grey: #353535;
@@ -260,7 +262,7 @@ p {
           transform: translate(-50%, -50%);
   width: 100%;
   max-width: 40vw;
-  background-color: white;
+  background-color: var(--background);
   padding: 6rem;
   border-radius: 5px;
   -webkit-box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
@@ -286,7 +288,7 @@ ul {
 
 ul li {
   font-size: 2em;
-  color: var(--light-red);
+  color: var(--font-color-model);
 }
 
 ul li[title]::before {
@@ -295,7 +297,7 @@ ul li[title]::before {
   font-weight: bold;
   padding: 4px;
   font-size: 0.55em;
-  color: black;
+  color: var(--font-color);
 }
 
 @media only screen and (max-width: 715px) {
@@ -369,15 +371,15 @@ ul li[title]::before {
 .switch-button-checkbox:checked + .switch-button-label:before {
   -webkit-transform: translateX(120px);
           transform: translateX(120px);
-  -webkit-transition: -webkit-transform 300ms linear;
-  transition: -webkit-transform 300ms linear;
-  transition: transform 300ms linear;
-  transition: transform 300ms linear, -webkit-transform 300ms linear;
+  -webkit-transition: -webkit-transform 300ms ease-in-out;
+  transition: -webkit-transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
 }
 
 .switch-button-checkbox + .switch-button-label {
   position: relative;
-  padding: 15px;
+  padding: 14px;
   display: block;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -393,10 +395,10 @@ ul li[title]::before {
   position: absolute;
   inset: 0;
   border-radius: 30px;
-  -webkit-transition: -webkit-transform 300ms;
-  transition: -webkit-transform 300ms;
-  transition: transform 300ms;
-  transition: transform 300ms, -webkit-transform 300ms;
+  -webkit-transition: -webkit-transform 300ms ease-in-out;
+  transition: -webkit-transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out;
+  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
   z-index: -1;
 }
 
@@ -406,66 +408,18 @@ ul li[title]::before {
 
 @media only screen and (max-width: 715px) {
   .switch-button {
-    width: 100%;
-    height: -webkit-max-content;
-    height: -moz-max-content;
-    height: max-content;
-    text-align: center;
     font-size: 10px;
-    font-weight: bolder;
-    letter-spacing: 1px;
-    color: white;
-    position: relative;
     padding-right: 80px;
-    position: relative;
   }
   .switch-button:before {
     width: 55px;
   }
-  .switch-button-checkbox {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    z-index: 2;
-  }
   .switch-button-checkbox:checked + .switch-button-label:before {
     -webkit-transform: translateX(76px);
             transform: translateX(76px);
-    -webkit-transition: -webkit-transform 300ms linear;
-    transition: -webkit-transform 300ms linear;
-    transition: transform 300ms linear;
-    transition: transform 300ms linear, -webkit-transform 300ms linear;
   }
   .switch-button-checkbox + .switch-button-label {
-    position: relative;
-    padding: 5px;
-    display: block;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    pointer-events: none;
-    isolation: isolate;
-  }
-  .switch-button-checkbox + .switch-button-label:before {
-    content: '';
-    background: var(--light-green);
-    position: absolute;
-    inset: 0;
-    border-radius: 30px;
-    -webkit-transition: -webkit-transform 300ms;
-    transition: -webkit-transform 300ms;
-    transition: transform 300ms;
-    transition: transform 300ms, -webkit-transform 300ms;
-    z-index: -1;
-  }
-  .switch-button-checkbox + .switch-button-label .switch-button-label-span {
-    position: relative;
+    padding: 9px;
   }
 }
 /*# sourceMappingURL=main.css.map */
