--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,7 @@
 html {
   --background: #fff;
   --font-color: #1a1a1a;
+  --font-color-model: #f34c4c;
   --light-grey: #e5e5e5;
   --light-green: #06d6a0;
   --light-red: #f34c4c;
@@ -12,6 +13,7 @@ html[data-theme='dark'] {
   --primary: #bb86fc;
   --primary-varient: #3700b3;
   --secondary: #03dac6;
+  --font-color-model: #06d6a0;
   --background: #1a1a1a;
   --font-color: #fff;
   --light-grey: #353535;
@@ -225,8 +227,7 @@ p {
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 40vw;
-
-  background-color: white;
+  background-color: var(--background);
   padding: 6rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
@@ -248,7 +249,7 @@ ul {
   list-style: none;
   li {
     font-size: 2em;
-    color: var(--light-red);
+    color: var(--font-color-model);
   }
 
   li[title]::before {
@@ -257,7 +258,7 @@ ul {
     font-weight: bold;
     padding: 4px;
     font-size: 0.55em;
-    color: black;
+    color: var(--font-color);
   }
 }
 @media only screen and (max-width: 715px) {
@@ -322,12 +323,12 @@ ul {
 
     &:checked + .switch-button-label:before {
       transform: translateX(120px);
-      transition: transform 300ms linear;
+      transition: transform 300ms ease-in-out;
     }
 
     & + .switch-button-label {
       position: relative;
-      padding: 15px;
+      padding: 14px;
       display: block;
       user-select: none;
       pointer-events: none;
@@ -338,7 +339,7 @@ ul {
         position: absolute;
         inset: 0;
         border-radius: 30px;
-        transition: transform 300ms;
+        transition: transform 300ms ease-in-out;
         z-index: -1;
       }
 
@@ -349,55 +350,18 @@ ul {
   }
 
   @media only screen and (max-width: 715px) {
-    width: 100%;
-    height: max-content;
-    text-align: center;
     font-size: 10px;
-    font-weight: bolder;
-    letter-spacing: 1px;
-    color: white;
-    position: relative;
     padding-right: 80px;
-    position: relative;
     &:before {
       width: 55px;
     }
     &-checkbox {
-      cursor: pointer;
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      z-index: 2;
-
       &:checked + .switch-button-label:before {
         transform: translateX(76px);
-        transition: transform 300ms linear;
       }
 
       & + .switch-button-label {
-        position: relative;
-        padding: 5px;
-        display: block;
-        user-select: none;
-        pointer-events: none;
-        isolation: isolate;
-        &:before {
-          content: '';
-          background: var(--light-green);
-          position: absolute;
-          inset: 0;
-          border-radius: 30px;
-          transition: transform 300ms;
-          z-index: -1;
-        }
-
-        .switch-button-label-span {
-          position: relative;
-        }
+        padding: 9px;
       }
     }
   }
