--- a/percentage-calculator/style/style.scss
+++ b/percentage-calculator/style/style.scss
@@ -2,23 +2,24 @@
 
 $ruler: 3vh;
 html {
-  --color-red: #ae1100;
+  --special-font-clr: #ae1100;
   --color-bg: #ebecf0;
   --color-shadow: #babecc;
   --color-white: #ffffff;
   --padding: 25px;
 }
 html[data-theme='dark'] {
-  --color-red: #13cfbc;
+  --special-font-clr: #13cfbc;
   --color-bg: #1a1a1a;
-  --color-shadow: rgba(0, 0, 0, 0.5);
+  --color-shadow: rgba(0, 0, 0, 0.9);
   --color-white: #1a1a1a;
   --font-color: white;
 }
-
+*,
 *::after,
 *::before {
   box-sizing: border-box;
+  user-select: none;
 }
 
 body,
@@ -39,6 +40,28 @@ body {
   overflow: hidden;
   margin: 0;
 }
+button {
+  width: 100%;
+  padding: 35px 0;
+  color: var(--font-color);
+  font-weight: bold;
+  box-shadow: -5px -5px 20px var(--color-white),
+    5px 5px 20px var(--color-shadow);
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  font-weight: 600;
+
+  &:hover {
+    box-shadow: -2px -2px 5px var(--color-white),
+      2px 2px 5px var(--color-shadow);
+  }
+
+  &:active {
+    box-shadow: inset 1px 1px 2px var(--color-shadow),
+      inset -1px -1px 2px var(--color-white);
+  }
+}
+
 .back-btn {
   width: max-content;
   padding: 0;
@@ -87,7 +110,7 @@ body {
     align-items: center;
     width: 100%;
     @media only screen and (max-width: 600px) {
-      width: 80%;
+      width: 75%;
       button {
         padding: 20px;
       }
@@ -137,8 +160,8 @@ input {
   }
 }
 .result,
-.red {
-  color: var(--color-red);
+.special-font-clr {
+  color: var(--special-font-clr);
 }
 
 .input,
@@ -147,28 +170,6 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-button {
-  width: 100%;
-  padding: 35px 0;
-  color: var(--font-color);
-  font-weight: bold;
-  box-shadow: -5px -5px 20px var(--color-white),
-    5px 5px 20px var(--color-shadow);
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-  font-weight: 600;
-
-  &:hover {
-    box-shadow: -2px -2px 5px var(--color-white),
-      2px 2px 5px var(--color-shadow);
-  }
-
-  &:active {
-    box-shadow: inset 1px 1px 2px var(--color-shadow),
-      inset -1px -1px 2px var(--color-white);
-  }
 }
 
 // night mode switch button
