--- a/style/main.scss
+++ b/style/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
 html {
   --background: #fff;
   --font-color: #1a1a1a;
@@ -46,10 +47,8 @@ html {
   top: 50%;
   transform: translate(-50%, -50%);
 
-  display: -block;
   width: 2em;
   height: 2em;
-  vertical-align: bottom;
   background-color: currentColor;
   border-radius: 50%;
   color: var(--light-green);
